2003-01-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c: Use GtkTextView/Buffer

	* src/xml/repr-util.c (sp_repr_transfer_ids): Helper by MenTaLguY
	(sp_repr_move): Ditto

2003-01-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/xml-tree.c: Updated (MenTaLguY)

	* src/dialogs/item-properties.c (sp_item_widget_new): Added slider (MenTaLguY)

	* src/text-context.c (sp_text_context_setup): Set up Gtk IM (thanks to MenTaLguY)
	(sp_text_context_setup_text): Move code here (MenTaLguY)
	(sp_text_context_root_handler): Process Gtk IM (MenTaLguY)
	(sptc_commit): Gtk IM signal handler (MenTaLguY)

	* src/sp-text.c (sp_text_insert): Replace < 32 and not whitespace with space

	* src/selection.c (SP_SELECTION_UPDATE_PRIORITY): Set Gtk - 11

	* src/document.c (SP_DOCUMENT_UPDATE_PRIORITY): Set GTK - 12

2003-01-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/button.c (sp_button_paint_arrow): Draw something

2002-12-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/event-context.c (sp_event_context_private_root_handler): Pan with
	Shift+Button3 too (useful with windows and < 3 button mice)

	* src/toolbox.c (sp_toolbox_file_create): Mek print buttons insensitive

	* src/sp-text.c (sp_text_write_transform): Fixed it

	* src/main.c (sp_do_export_png): Initialize y0

	* src/file.c (sp_export_png_file): Use pixelstore, export min 64 rows at once,
	fix miscalculated rowstride

2002-12-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-directory.c (nr_type_read_w32_list): Use
	windows native fonts, if applicable

	* src/libnrtype/nr-type-w32.h: New file

	* src/libnrtype/nr-type-w32.c: New file

2002-12-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_image_R8G8B8A8_N): Implement direct PS version

2002-12-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_bpath): Helper
	(sp_print_bind): Implement non-gnome-print version
	(sp_print_release): Ditto
	(sp_print_fill): Ditto