@@ -1,7 +1,7 @@
 #define __SP_XMLVIEW_CONTENT_C__
 
 /*
- * Specialization of GtkText for the XML tree view
+ * Specialization of GtkTextView for the XML tree view
  *
  * Authors:
  *   MenTaLguY <mental@rydia.net>
@@ -16,20 +16,22 @@
 #include <gtk/gtkmain.h>
 #include <gtk/gtksignal.h>
 #include <gtk/gtkmarshal.h>
-#include <gtk/gtktext.h>
 #include <gtk/gtkadjustment.h>
-#include "../xml/repr.h"
-#include "../xml/repr-private.h"
+
+#include "macros.h"
+#include "xml/repr.h"
+#include "xml/repr-private.h"
 #include "sp-xmlview-content.h"
 
 static void sp_xmlview_content_class_init (SPXMLViewContentClass * klass);
 static void sp_xmlview_content_init (SPXMLViewContent * text);
 static void sp_xmlview_content_destroy (GtkObject * object);
-static void sp_xmlview_content_changed (GtkEditable * editable);
+
+void sp_xmlview_content_changed (GtkTextBuffer *tb, SPXMLViewContent *text);
 
 static void event_content_changed (SPRepr * repr, const guchar * old_content, const guchar * new_content, gpointer data);
 
-static GtkTextClass * parent_class = NULL;
+static GtkTextViewClass * parent_class = NULL;
 
 static SPReprEventVector repr_events = {
 	NULL, /* destroy */
@@ -48,10 +50,20 @@ static SPReprEventVector repr_events = {
 GtkWidget *
 sp_xmlview_content_new (SPRepr * repr)
 {
-	SPXMLViewContent * text;
+	GtkTextBuffer *tb;
+	SPXMLViewContent *text;
 
+	tb = gtk_text_buffer_new (NULL);
 	text = gtk_type_new (SP_TYPE_XMLVIEW_CONTENT);
-	gtk_text_set_adjustments (GTK_TEXT (text), GTK_ADJUSTMENT (gtk_adjustment_new (0.0, 0.0, 1.0, 0.2, 1.0, 1.0)), GTK_ADJUSTMENT (gtk_adjustment_new (0.0, 0.0, 1.0, 0.2, 1.0, 1.0)));
+	gtk_text_view_set_buffer (GTK_TEXT_VIEW (text), tb);
+
+	g_signal_connect (G_OBJECT (tb), "changed", G_CALLBACK (sp_xmlview_content_changed), text);
+
+#if 0
+	gtk_text_set_adjustments (GTK_TEXT (text),
+				  GTK_ADJUSTMENT (gtk_adjustment_new (0.0, 0.0, 1.0, 0.2, 1.0, 1.0)),
+				  GTK_ADJUSTMENT (gtk_adjustment_new (0.0, 0.0, 1.0, 0.2, 1.0, 1.0)));
+#endif
 
 	sp_xmlview_content_set_repr (text, repr);
 
@@ -72,8 +84,8 @@ sp_xmlview_content_set_repr (SPXMLViewContent * text, SPRepr * repr)
 		sp_repr_add_listener (repr, &repr_events, text);
 		sp_repr_synthesize_events (repr, &repr_events, text);
 	} else {
-		gtk_editable_delete_text (GTK_EDITABLE (text), 0, -1);
-		gtk_editable_set_editable (GTK_EDITABLE (text), 0);
+		gtk_text_buffer_set_text (gtk_text_view_get_buffer (GTK_TEXT_VIEW (text)), "", 0);
+		gtk_text_view_set_editable (GTK_TEXT_VIEW (text), FALSE);
 	}
 }
 
@@ -91,7 +103,7 @@ sp_xmlview_content_get_type (void)
 			(GtkObjectInitFunc) sp_xmlview_content_init,
 			NULL, NULL, NULL
 		};
-		type = gtk_type_unique (GTK_TYPE_TEXT, &info);
+		type = gtk_type_unique (GTK_TYPE_TEXT_VIEW, &info);
 	}
 
 	return type;
@@ -101,18 +113,16 @@ void
 sp_xmlview_content_class_init (SPXMLViewContentClass * klass)
 {
 	GtkObjectClass * object_class;
-	GtkEditableClass * editable_class;
 
 	object_class = (GtkObjectClass *) klass;
-	object_class->destroy = sp_xmlview_content_destroy;
-	editable_class = (GtkEditableClass *) klass;
-	editable_class->changed = sp_xmlview_content_changed;
 
-	parent_class = gtk_type_class (GTK_TYPE_TEXT);
+	parent_class = gtk_type_class (GTK_TYPE_TEXT_VIEW);
+
+	object_class->destroy = sp_xmlview_content_destroy;
 }
 
 void
-sp_xmlview_content_init (SPXMLViewContent * text)
+sp_xmlview_content_init (SPXMLViewContent *text)
 {
 	text->repr = NULL;
 	text->blocked = FALSE;
@@ -139,6 +149,8 @@ event_content_changed (SPRepr * repr, const guchar * old_content, const guchar *
 	if (text->blocked) return;
 
 	text->blocked = TRUE;
+
+#if 0
 	gtk_text_freeze (GTK_TEXT (text));
 	gtk_editable_delete_text (GTK_EDITABLE (text), 0, -1);
 	if (new_content) {
@@ -147,21 +159,29 @@ event_content_changed (SPRepr * repr, const guchar * old_content, const guchar *
 	}
 	gtk_editable_set_editable (GTK_EDITABLE (text), new_content != NULL);
 	gtk_text_thaw (GTK_TEXT (text));
+#else
+	if (new_content) {
+		gtk_text_buffer_set_text (gtk_text_view_get_buffer (GTK_TEXT_VIEW (text)), new_content, strlen (new_content));
+	} else {
+		gtk_text_buffer_set_text (gtk_text_view_get_buffer (GTK_TEXT_VIEW (text)), "", 0);
+	}
+	gtk_text_view_set_editable (GTK_TEXT_VIEW (text), new_content != NULL);
+#endif
+
 	text->blocked = FALSE;
 }
 
 void
-sp_xmlview_content_changed (GtkEditable * editable)
+sp_xmlview_content_changed (GtkTextBuffer *tb, SPXMLViewContent *text)
 {
-	SPXMLViewContent * text;
-	text = SP_XMLVIEW_CONTENT (editable);
-
 	if (text->blocked) return;
 
 	if (text->repr) {
+		GtkTextIter start, end;
 		gchar *data;
 		text->blocked = TRUE;
-		data = gtk_editable_get_chars (GTK_EDITABLE (editable), 0, -1);
+		gtk_text_buffer_get_bounds (tb, &start, &end);
+		data = gtk_text_buffer_get_text (tb, &start, &end, TRUE);
 		sp_repr_set_content (text->repr, data);
 		g_free (data);
 		text->blocked = FALSE;
